--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "convex": "^1.31.2",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
